--- a/frontend/Admin/chat-admin.html
+++ b/frontend/Admin/chat-admin.html
@@ -28,9 +28,10 @@
     </header>
 
     <!-- SIDEBAR -->
-    <aside class="sidebar" id="sidebar">
+     <aside class="sidebar" id="sidebar">
         <ul class="sidebar-menu">
-                            <a href="#" class="menu-link active">
+            <li class="menu-item">
+                <a href="#" class="menu-link active">
                     <i class="fas fa-home menu-icon"></i>
                     <span class="menu-text">Tổng quan</span>
                 </a>
@@ -62,7 +63,7 @@
             </li>
 
             <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="/frontend/Admin/promotion.html" class="menu-link">
                     <i class="fas fa-percent menu-icon"></i>
                     <span class="menu-text">Khuyến mãi</span>
                 </a>
@@ -74,13 +75,16 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a class="menu-link active" href="/frontend/Admin/chat-admin.html">
-                    <i class="fas fa-comment-dots menu-icon"></i>
-                    <span class="menu-text">
-                        Tin nhắn
-                        <!-- 🔴 Badge số tin mới từ khách -->
-                        <span id="adminChatBadge" class="menu-badge d-none">0</span>
-                    </span>
+                <a href="/frontend/Admin/chat-admin.html" class="menu-link">
+                    <i class="fas fa-comment menu-icon"></i>
+                    <span class="menu-text">Tin nhắn</span>
+                    <span class="menu-badge">8</span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="#" class="menu-link">
+                    <i class="fas fa-cog menu-icon"></i>
+                    <span class="menu-text">Cài đặt</span>
                 </a>
             </li>
         </ul>
