--- a/frontend/trangchu.html
+++ b/frontend/trangchu.html
@@ -51,7 +51,7 @@
                                         class="fas fa-sign-in-alt me-2"></i>Đăng nhập</a></li>
 
                             <!-- Khi đã đăng nhập -->
-                            <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
+                            <li class="logged-in d-none"><a class="dropdown-item" href="/frontend/profile.html"><i
                                         class="fas fa-user-circle me-2"></i>Tài khoản của tôi</a></li>
                             <li class="logged-in d-none"><a class="dropdown-item" href="/frontend/donhangcuatoi.html"><i
                                         class="fas fa-box me-2"></i>Đơn hàng của tôi</a></li>
@@ -102,7 +102,7 @@
     </div>
 
     <!-- Footer -->
-    <footer id="contact">
+    <footer id="contact" class="bg-dark text-white py-5 mt-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 mb-4">
@@ -128,11 +128,11 @@
                 <div class="col-md-3 mb-4">
                     <h5>Chính Sách</h5>
                     <ul>
-                        <li><a href="#">Chính sách bảo hành</a></li>
-                        <li><a href="#">Chính sách đổi trả</a></li>
-                        <li><a href="#">Chính sách vận chuyển</a></li>
-                        <li><a href="#">Phương thức thanh toán</a></li>
-                        <li><a href="#">Bảo mật thông tin</a></li>
+                        <li><a href="/frontend/warranty-policy.html">Chính sách bảo hành</a></li>
+                        <li><a href="/frontend/Return-policy.html">Chính sách đổi trả</a></li>
+                        <li><a href="/frontend/Shipping-policy.html">Chính sách vận chuyển</a></li>
+                        <li><a href="/frontend/Payment-policy.html">Phương thức thanh toán</a></li>
+                        <li><a href="/frontend/privacy-policy.html">Bảo mật thông tin</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 mb-4">
