--- a/frontend/Admin/customermanagement.html
+++ b/frontend/Admin/customermanagement.html
@@ -94,7 +94,7 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="/frontend/Admin/promotion.html" class="menu-link">
                     <i class="fas fa-percent menu-icon"></i>
                     <span class="menu-text">Khuyến mãi</span>
                 </a>
