--- a/frontend/Admin/order.html
+++ b/frontend/Admin/order.html
@@ -94,13 +94,13 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="/frontend/Admin/promotion.html" class="menu-link">
                     <i class="fas fa-percent menu-icon"></i>
                     <span class="menu-text">Khuyến mãi</span>
                 </a>
             </li>
             <li class="menu-item">
-                <a href="#" class="menu-link">
+                <a href="/frontend/Admin/promotion.html" class="menu-link">
                     <i class="fas fa-star menu-icon"></i>
                     <span class="menu-text">Đánh giá</span>
                 </a>
