--- a/frontend/tranggiohang.html
+++ b/frontend/tranggiohang.html
@@ -50,7 +50,7 @@
                                         class="fas fa-sign-in-alt me-2"></i>Đăng nhập</a></li>
 
                             <!-- Khi đã đăng nhập -->
-                            <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
+                            <li class="logged-in d-none"><a class="dropdown-item" href="/frontend/profile.html"><i
                                         class="fas fa-user-circle me-2"></i>Tài khoản của tôi</a></li>
                             <li class="logged-in d-none"><a class="dropdown-item" href="#"><i
                                         class="fas fa-box me-2"></i>Đơn hàng của tôi</a></li>
