--- a/frontend/donhangcuatoi.html
+++ b/frontend/donhangcuatoi.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/my-orders.css">
 </head>
+
 <body>
     <div class="wrapper">
         <!-- Sidebar -->
@@ -15,7 +17,7 @@
             <div class="sidebar-header">
                 <h2><i class="fas fa-store"></i> Đơn hàng của tôi<h2>
             </div>
-            
+
         </aside>
 
         <!-- Main Content -->
@@ -27,7 +29,8 @@
                         <i class="fas fa-search"></i>
                         <input type="text" id="searchInput" placeholder="Tìm kiếm đơn hàng...">
                     </div>
-                </div>                <div class="top-bar-right">
+                </div>
+                <div class="top-bar-right">
                     <div class="user-info">
                         <div>
                             <div style="font-size: 13px; font-weight: 600;">Xin chào</div>
@@ -35,9 +38,11 @@
                         </div>
                         <!-- Bootstrap Dropdown for User Avatar -->
                         <div class="dropdown">
-                            <div class="user-avatar dropdown-toggle" id="userAvatar" data-bs-toggle="dropdown" aria-expanded="false"></div>
+                            <div class="user-avatar dropdown-toggle" id="userAvatar" data-bs-toggle="dropdown"
+                                aria-expanded="false"></div>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userAvatar">
-                                <li><a class="dropdown-item text-danger" href="#" onclick="logout()"><i class="fas fa-sign-out-alt me-2"></i>Đăng xuất</a></li>
+                                <li><a class="dropdown-item text-danger" href="#" onclick="logout()"><i
+                                            class="fas fa-sign-out-alt me-2"></i>Đăng xuất</a></li>
                             </ul>
                         </div>
                     </div>
@@ -89,7 +94,10 @@
             <!-- Pagination -->
             <div class="pagination" id="pagination"></div>
         </main>
-    </div>    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/donhangcuatoi.js"></script>
 </body>
+
 </html>
