Resolve merge conflicts and add forgot password feature

--- a/frontend/donhangcuatoi.html
+++ b/frontend/donhangcuatoi.html
@@ -48,6 +48,10 @@
             <div class="page-header">
                 <h1 class="page-title"><i class="fas fa-box"></i> Đơn Hàng Của Tôi</h1>
                 <p class="page-subtitle">Quản lý và theo dõi tất cả đơn hàng của bạn</p>
+                <a href="/frontend/trangchu.html" class="btn-back-home">
+                    <i class="fas fa-arrow-left"></i> Trở về trang chủ
+                </a>
+
 
                 <!-- Controls -->
                 <div class="controls">
