--- a/frontend/trangchu.html
+++ b/frontend/trangchu.html
@@ -41,8 +41,8 @@
                     <div class="dropdown">
                         <a href="#" class="text-white dropdown-toggle d-flex align-items-center"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img id="user-avatar" src="./img/avt.jpg" alt="avatar"
-                                class="rounded-circle me-2" style="width:30px;height:30px;object-fit:cover;">
+                            <img id="user-avatar" src="./img/avt.jpg" alt="avatar" class="rounded-circle me-2"
+                                style="width:30px;height:30px;object-fit:cover;">
                             <span id="user-name">Tài khoản</span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
@@ -93,10 +93,34 @@
                     </div>
                 </div>
 
+                <div class="controls" style="margin-top: 15px; margin-bottom: 15px;">
+                    <div class="filter-group">
+                        <label>Sắp xếp theo:</label>
+                        <button class="sort-btn active" data-sort="newest" onclick="sortByType('newest')">
+                            <i class="fas fa-clock"></i> Mới nhất
+                        </button>
+                        <button class="sort-btn" data-sort="bestseller" onclick="sortByType('bestseller')">
+                            <i class="fas fa-fire"></i> Bán chạy
+                        </button>
+                        <button class="sort-btn" data-sort="price-low" onclick="sortByType('price-low')">
+                            <i class="fas fa-arrow-down"></i> Giá thấp
+                        </button>
+                        <button class="sort-btn" data-sort="price-high" onclick="sortByType('price-high')">
+                            <i class="fas fa-arrow-up"></i> Giá cao
+                        </button>
+                    </div>
+                </div>
+
                 <!-- Products Container -->
                 <div id="products-container">
                     <!-- Products sẽ được load từ JS -->
                 </div>
+                <div class="d-flex justify-content-center mt-4">
+                    <nav>
+                        <ul class="pagination" id="pagination"></ul>
+                    </nav>
+                </div>
+
             </div>
         </div>
     </div>
@@ -153,32 +177,32 @@
             </div>
         </div>
         <!-- Floating chat button -->
-<div id="chatWidget">
-    <div id="chatButton">
-        <i class="fas fa-comments"></i>
-        <!-- 🔴 Badge đếm tin nhắn mới -->
-        <span id="chatBadge" class="chat-badge d-none">0</span>
-    </div>
+        <div id="chatWidget">
+            <div id="chatButton">
+                <i class="fas fa-comments"></i>
+                <!-- 🔴 Badge đếm tin nhắn mới -->
+                <span id="chatBadge" class="chat-badge d-none">0</span>
+            </div>
 
-    <div id="chatBox">
-        <div class="chat-header">
-            <span>Hỗ trợ khách hàng</span>
+            <div id="chatBox">
+                <div class="chat-header">
+                    <span>Hỗ trợ khách hàng</span>
 
-            <div>
-                <button id="closeChat">
-                    <i class="fas fa-times"></i>
-                </button>
+                    <div>
+                        <button id="closeChat">
+                            <i class="fas fa-times"></i>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="chat-messages" id="chatMessages"></div>
+
+                <div class="chat-input-area">
+                    <input type="text" id="chatInput" placeholder="Nhập tin nhắn..." />
+                    <button id="sendMsg"><i class="fas fa-paper-plane"></i></button>
+                </div>
             </div>
         </div>
-
-        <div class="chat-messages" id="chatMessages"></div>
-
-        <div class="chat-input-area">
-            <input type="text" id="chatInput" placeholder="Nhập tin nhắn..." />
-            <button id="sendMsg"><i class="fas fa-paper-plane"></i></button>
-        </div>
-    </div>
-</div>
 
     </footer>
 
