--- a/frontend/forgotPassword.html
+++ b/frontend/forgotPassword.html
@@ -155,6 +155,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js/quenmatkhau.js"></script>
+    <script src="js/forgotPassword.js"></script>
 </body>
 </html>
