--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,9 +72,9 @@
     <script src="js/Register.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/Login.js"></script>
+    <script src="js/activation.js"></script>
 
 
 
 </body>
-
 </html>
