--- a/frontend/Admin/admin.html
+++ b/frontend/Admin/admin.html
@@ -59,7 +59,7 @@
     <aside class="sidebar" id="sidebar">
         <ul class="sidebar-menu">
             <li class="menu-item">
-                <a href="#" class="menu-link active">
+                <a href="/frontend/Admin/admin.html" class="menu-link active">
                     <i class="fas fa-home menu-icon"></i>
                     <span class="menu-text">Tổng quan</span>
                 </a>
@@ -69,12 +69,16 @@
                     <i class="fas fa-box menu-icon"></i>
                     <span class="menu-text">Quản lý sản phẩm</span>
                 </a>
+            </li>            <li class="menu-item">
+                <a href="/frontend/Admin/category-management.html" class="menu-link">
+                    <i class="fas fa-star menu-icon"></i>
+                    <span class="menu-text">Danh mục</span>
+                </a>
             </li>
             <li class="menu-item">
                 <a href="/frontend/Admin/order.html" class="menu-link">
                     <i class="fas fa-shopping-cart menu-icon"></i>
                     <span class="menu-text">Đơn hàng</span>
-                    <span class="menu-badge">12</span>
                 </a>
             </li>
             <li class="menu-item">
@@ -91,28 +95,15 @@
             </li>
 
             <li class="menu-item">
-                <a href="/frontend/Admin/" class="menu-link">
+                <a href="/frontend/Admin/promotion.html" class="menu-link">
                     <i class="fas fa-percent menu-icon"></i>
                     <span class="menu-text">Khuyến mãi</span>
-                </a>
-            </li>
-            <li class="menu-item">
-                <a href="#" class="menu-link">
-                    <i class="fas fa-star menu-icon"></i>
-                    <span class="menu-text">Đánh giá</span>
                 </a>
             </li>
             <li class="menu-item">
                 <a href="/frontend/Admin/chat-admin.html" class="menu-link">
                     <i class="fas fa-comment menu-icon"></i>
                     <span class="menu-text">Tin nhắn</span>
-                    <span class="menu-badge">8</span>
-                </a>
-            </li>
-            <li class="menu-item">
-                <a href="#" class="menu-link">
-                    <i class="fas fa-cog menu-icon"></i>
-                    <span class="menu-text">Cài đặt</span>
                 </a>
             </li>
         </ul>
