--- a/frontend/Admin/promotion.html
+++ b/frontend/Admin/promotion.html
@@ -72,10 +72,15 @@
                 </a>
             </li>
             <li class="menu-item">
+                <a href="/frontend/Admin/category-management.html" class="menu-link">
+                    <i class="fas fa-star menu-icon"></i>
+                    <span class="menu-text">Danh mục</span>
+                </a>
+            </li>
+            <li class="menu-item">
                 <a href="/frontend/Admin/order.html" class="menu-link">
                     <i class="fas fa-shopping-cart menu-icon"></i>
                     <span class="menu-text">Đơn hàng</span>
-                    <span class="menu-badge">12</span>
                 </a>
             </li>
             <li class="menu-item">
@@ -98,24 +103,10 @@
                     <span class="menu-text">Khuyến mãi</span>
                 </a>
             </li>
-
-            <li class="menu-item">
-                <a href="#" class="menu-link">
-                    <i class="fas fa-star menu-icon"></i>
-                    <span class="menu-text">Đánh giá</span>
-                </a>
-            </li>
             <li class="menu-item">
                 <a href="/frontend/Admin/chat-admin.html" class="menu-link">
                     <i class="fas fa-comment menu-icon"></i>
                     <span class="menu-text">Tin nhắn</span>
-                    <span class="menu-badge">8</span>
-                </a>
-            </li>
-            <li class="menu-item">
-                <a href="#" class="menu-link">
-                    <i class="fas fa-cog menu-icon"></i>
-                    <span class="menu-text">Cài đặt</span>
                 </a>
             </li>
         </ul>
